styles/typography.css
/* ... */
::-moz-selection /* set separately */
  { text-shadow: none }
::selection
  { text-shadow: none }

/* https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face */
/* https://www.digitalocean.com/community/tutorials/how-to-load-and-use-custom-fonts-with-css */
@font-face { font-family: Chalk;
  font-weight: 400;
  font-style: normal;
  font-stretch: 1% 500%; /* Required by Chrome */
  /* https://apple.stackexchange.com/questions/79875/how-can-i-get-the-postscript-name-of-a-ttf-font-installed-in-os-x */
  src:
    local('DBJ CHALK IT UP') /* Full Name */
  , local('DJBCHALKITUP')    /* Postscript Name */
  , url(chalk.ttf);          /* fallback file location */
/*
  src:
    local('chalk') tech(color-COLRv1),
    local('chalk-bold') format('truetype'),
*/
}

@font-face { font-family: Emoji; /* 🐰 🥚 */
  /*
    - https://www.client9.com/css-color-emoji-stack/
    - https://coderwall.com/p/ruv9hq/display-emoji-glyphs-intermingled-with-arbitrary-text
  */
  font-weight: 400;
  font-style: normal;
  font-stretch: 1% 500%; /* Required by Chrome */
  src: Emoji, /* 🤷 - https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/src */
       local('Segoe UI Emoji'),    /* Windows emoji */
       local('Segoe UI Symbol'),   /* Windows emoji */
       local('Noto Color Emoji'),  /* Linux emoji */
       local('Apple Color Emoji'), /* macOS emoji */
       local('Wingdings') /* https://en.wikipedia.org/wiki/Wingdings */
  ;
  /* Emoji unicode blocks */
  unicode-range: U+1F300-1F5FF, U+1F600-1F64F, U+1F680-1F6FF, U+2600-26FF;
}


/*
  - Viewport Sizes - https://docs.adobe.com/content/help/en/target/using/experiences/vec/mobile-viewports.html
*/
@media screen and (min-width: 768px) {
  :root {
    --font-size: 2vw;
    --text-align: start;
  }
}

@media screen and (min-width: 1200px) {
  :root {
    --column-count: 1;
    --font-size: 1.618vw;
  }
}

* { padding: var( --margin-collapse-bugfix ) }

html {
  unicode-range: U+0-10FFFF; /* https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/unicode-range */
  /* https://developer.mozilla.org/en-US/docs/Web/CSS/tab-size */
  -moz-tab-size:  var(--tab-size);
  tab-size:       var(--tab-size);
  font-size:      var(--font-size);
  text-align:     var(--text-align);
  font-family:    var(--font-family);
  line-height:    var(--line-height);
  word-spacing:   var(--word-spacing);
  letter-spacing: var(--letter-spacing);
  font-size-adjust:      0.5; /* Firefox - https://caniuse.com/font-size-adjust */
  font-stretch:          100%;  /* https://developer.mozilla.org/en-US/docs/Web/CSS/font-stretch */
  /*
    - https://www.client9.com/css-color-emoji-stack/
    - https://caniuse.com/mdn-css_properties_font-variant-emoji
    - Firefox - https://developer.mozilla.org/en-US/docs/Web/CSS/font-variant-emoji
    - Unicode Emoji Variants -  https://www.unicode.org/emoji/charts/emoji-variants.html
  */
  font-variant-emoji:    emoji;

  font-feature-settings: normal; /* https://developer.mozilla.org/en-US/docs/Web/CSS/font-feature-settings */
  font-display:          fallback; /* https://developer.mozilla.org/en-US/docs/Learn/Performance/CSS#the_font-display_property */
  font-variant-numeric:  slashed-zero; /* https://css-tricks.com/almanac/properties/f/font-variant-numeric/ */
  -webkit-text-size-adjust: var(--text-size-adjust);
     -moz-text-size-adjust: var(--text-size-adjust);
          text-size-adjust: var(--text-size-adjust);

  /* https://css-tricks.com/snippets/css/prevent-long-urls-from-breaking-out-of-container/ */
  /* https://css-tricks.com/almanac/properties/w/word-break/ */
  /* These are technically the same, but use both */
  overflow-wrap:  break-word; /* https://developer.mozilla.org/en-US/docs/Web/CSS/overflow-wrap */
  word-wrap:      break-word;
  -ms-word-break: break-all;
  /* Instead use this non-standard one: */
      word-break: break-word;

  /* https://medium.com/clear-left-thinking/all-you-need-to-know-about-hyphenation-in-css-2baee2d89179 */
  /* https://developer.mozilla.org/en-US/docs/Web/CSS/hyphenate-limit-chars */
  /* Adds a hyphen where the word breaks, if supported (No Blink) */
  /* https://css-tricks.com/almanac/properties/h/hyphenate/ */
  -webkit-hyphenate-limit-chars: 10 3 4;  /* not yet supported */ 
     -moz-hyphenate-limit-chars: 10 3 4;  /* not yet supported */ 
          hyphenate-limit-chars: 10 3 4;

  /* https://developer.mozilla.org/en-US/docs/Web/CSS/hyphens */
  -webkit-hyphens: auto;
          hyphens: auto;
}

::before, ::after
  /* https://stackoverflow.com/questions/7327326/what-is-the-difference-between-before-and-before */
  { text-decoration: inherit }

body {
  margin: 0 auto var(--margin-collapse-bugfix);
  text-rendering: optimizeSpeed; /* https://css-tricks.com/almanac/properties/t/text-rendering/ */
}
body > * { margin: var(--viewport) }

body > header,
body > main,
body > aside,
body > footer
  { outline: 0.3em dashed }

body > header { }
body > main   { }
body > aside {
  /* font-size: var(--smaller); */ /* 90% of 1.618em */
}
body > footer
  { text-align: center }

/**
 * Correct the font size and margin on `h1` elements within `section` and
 * `article` contexts in Chrome, Firefox, and Safari.
 * - http://webtypography.net/3.1.1
 */
hgroup { }
header, h1, h2, h3, h4, h5, h6 {
  font-weight: bold;
  margin: var(--margin) var(--font-size) auto;
  text-shadow: 0.05em 0.05em 0.2em var(--text-shadow);
}
header { --fs: calc(var(--font-size) * var(--larger));
  font-size: var(-fs);
  /* http://webtypography.net/3.2.1 */
  /* http://webtypography.net/3.2.2 */
  /* https://developer.mozilla.org/en-US/docs/Web/CSS/font-variant-caps */
  font-variant-caps: small-caps;
}
header *
  { text-transform: initial }
section > header
  {font-size: var(--largest);--fs: 1.681em;font-size: calc( var(--largest) * var(--golden-ratio) );}

a:has(header, h1, h2, h3, h4, h5, h6),
:where(header, h1, h2, h3, h4, h5, h6) a
  { color: currentColor }
/* ... */

